k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: match-service
  labels:
    app: matchservice
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 2859
      targetPort: 2859
      protocol: TCP
  selector:
     app: matchservice
